--- a/HW4.Rmd
+++ b/HW4.Rmd
@@ -24,6 +24,7 @@ knitr::opts_chunk$set(
 
 ```{r packages}
 # Load necessary packages
+
 library(tidyverse)
 library(data.table)
 library(lubridate)
@@ -64,6 +65,50 @@ post_stim_files <- list.files(
   recursive = TRUE,
   full.names = TRUE
 )
+# Function to read post-stimulus numeric data with improved error handling
+read_post_stimulus <- function(file_path) {
+  tryCatch({
+    data <- read.csv(file_path, header = FALSE)
+    
+    # Ensure we have the expected number of columns
+    if(ncol(data) >= 18) {
+      colnames(data) <- c("ReportTime", "StartTime", "EndTime", "Interrupted", "StimOrder", 
+                         "StimID", "ParticipantNumber", "Cough", "Sneeze", "Laugh", "Doze", 
+                         "Yawn", "ShiverChills", "MoveToMusic", "Other", "Familiarity", 
+                         "Liking", "Focus", "SelfConsciousness")[1:ncol(data)]
+    } else {
+      warning(paste("Post-stimulus file has unexpected column count:", file_path))
+      return(NULL)
+    }
+    
+    # Extract session from filename with regex
+    file_name <- basename(file_path)
+    session_match <- regexpr("Sess(\\d+)", file_name)
+    participant_match <- regexpr("P(\\d+)", file_name)
+    
+    data$Session <- if(session_match > 0) 
+      as.numeric(gsub("Sess", "", regmatches(file_name, session_match))) else NA
+    data$Participant <- if(participant_match > 0) 
+      as.numeric(gsub("P", "", regmatches(file_name, participant_match))) else NA
+    
+    # Convert numeric data to appropriate types
+    numeric_cols <- c("Interrupted", "StimOrder", "StimID", "Cough", "Sneeze", 
+                     "Laugh", "Doze", "Yawn", "ShiverChills", "MoveToMusic", "Other",
+                     "Familiarity", "Liking", "Focus", "SelfConsciousness")
+    numeric_cols <- numeric_cols[numeric_cols %in% names(data)]
+    
+    for(col in numeric_cols) {
+      data[[col]] <- as.numeric(as.character(data[[col]]))
+    }
+    
+    return(data)
+  }, error = function(e) {
+    warning(paste("Failed to process post-stimulus file:", file_path, "\nError:", e$message))
+    return(NULL)
+  })
+}
+
+
 
 cat("Processing", length(post_stim_files), "post-stimulus files...\n")
 post_stimulus_list <- lapply(post_stim_files, read_post_stimulus)
@@ -71,29 +116,67 @@ post_stimulus_list <- post_stimulus_list[!sapply(post_stimulus_list, is.null)]
 post_stimulus_data <- bind_rows(post_stimulus_list)
 cat("Loaded", nrow(post_stimulus_data), "rows of post-stimulus data\n")
 
-# Load stimulus metadata (if not included in the downsampled data)
-# Only needed if the metadata wasn't joined to your data before downsampling
-if(!"Title" %in% names(continuous_data_1Hz)) {
-  stimulus_metadata <- tibble(
-    StimID = c(101, 102, 103, 104, 105, 106, 107, 
-               211, 212, 213, 214, 
-               221, 222, 223, 224, 
-               231, 232, 233, 234, 
-               241, 242, 243, 244),
-    # Rest of metadata as in your original code
-    # ...
-  )
-  # Join metadata to the downsampled data
-  continuous_data_1Hz <- continuous_data_1Hz %>%
-    left_join(stimulus_metadata, by = "StimID")
-}
+# Convert StimID to numeric before joining
 
+continuous_data_1Hz <- continuous_data_1Hz %>%
+  mutate(StimID = as.numeric(as.character(StimID)))
+
+# Then create and join the metadata
+stimulus_metadata <- tibble(
+  StimID = c(101, 102, 103, 104, 105, 106, 107, 
+             211, 212, 213, 214, 
+             221, 222, 223, 224, 
+             231, 232, 233, 234, 
+             241, 242, 243, 244),
+  Title = c("String Quartet Op. 131, II - III", "Stampede", "Basket", "1685/Bach", 
+            "O Fortuna, Carmina Burana", "Le rosier de trois couleurs de roses", "Visiting Hours",
+            "Timshel", "Reapers", "L'inverno (Winter): I. Allegro Non Molto", "Nanou 2",
+            "Endless Love", "Dare You to Move", "Enchanted Suite", "Love Theme for Nata",
+            "Always Be My Baby", "Hard In Da Paint", "Animals", "Europa (Earth's Cry Heaven's Smile)",
+            "Ojos Color Sol", "It's Still Rock and Roll to Me", "Rodeo: Hoe-Down", "25-1-14-14"),
+  Artist = c("Artemis Quartet/L. v. Beethoven", "The Quantic Soul Orchestra/Will Holland", 
+             "Dan Mangan", "Nosaj Thing", "Orch. Symph. Montreal/Carl Orff", 
+             "STRADA/Anon", "Shane Koyczan", "Mumford & Sons", "Muse", 
+             "Joshua Bell & Academy of St. Martin in the Fields/A. Vivaldi", "Aphex Twin",
+             "Luther Vandross/L. Richie", "Switchfoot/J. Foreman", "Alan Menken", "Ennio Morricone",
+             "Mariah Carey/M. Carey & J. Dupri & M. Seal", "Waka Flocka Flame", "Martin Garrix", 
+             "Santana/C. Santana & T. Coster", "Calle 13/E. Cabra", "Billy Joel", 
+             "Leonard Slatkin & Saint Louis Symphony Orchestra/A. Copland", "Pierre Lapointe"),
+  Genre = c("Classical", "Funk", "Singer/Songwriter", "Dubstep/Glitch-hop", 
+            "20th C. Classical", "French Canadian Folksong", "Spoken word", 
+            "Folk", "Rock", "Baroque", "Piano", 
+            "R & B", "Pop", "Soundtrack", "Soundtrack", 
+            "Pop", "Hip-hop/Rap", "Electronic Dance Music", "Rock", 
+            "Latin Urban", "Rock'n'Roll", "Classical", "French Pop"),
+  Duration_s = c(215, 188, 232, 168, 159, 146, 250, 
+                 173, 360, 204, 204, 
+                 258, 247, 272, 247, 
+                 258, 246, 304, 306, 
+                 217, 177, 261, 142)
+) %>%
+  mutate(
+    ExperimentSelected = substr(as.character(StimID), 1, 1) == "1",
+    ParticipantSelected = substr(as.character(StimID), 1, 1) == "2",
+    # Add broad genre categories
+    GenreCategory = case_when(
+      Genre %in% c("Classical", "Baroque", "20th C. Classical", "Piano") ~ "Classical",
+      Genre %in% c("Rock", "Rock'n'Roll") ~ "Rock",
+      Genre %in% c("Pop", "R & B", "Singer/Songwriter", "Folk") ~ "Pop/Folk",
+      Genre %in% c("Hip-hop/Rap", "Electronic Dance Music", "Dubstep/Glitch-hop", "Funk") ~ "Electronic/Urban",
+      Genre %in% c("Soundtrack") ~ "Soundtrack",
+      TRUE ~ "Other"
+    )
+  )
+
+# Then join
+continuous_data_1Hz <- continuous_data_1Hz %>%
+  left_join(stimulus_metadata, by = "StimID")
 
 ```
 Plot
 ```{r}
 # Visualization to confirm no extreme outliers remain
-cleaned_boxplots <- cleaned_continuous %>%
+cleaned_boxplots <- continuous_data_1Hz %>%
   pivot_longer(cols = c(BVP, Corr, Resp, Skin, Temp, Trap, Zygo), 
                names_to = "Measure", values_to = "Value") %>%
   ggplot(aes(x = Measure, y = Value)) +
@@ -104,14 +187,15 @@ cleaned_boxplots <- cleaned_continuous %>%
   theme(axis.text.x = element_blank())
 
 print(cleaned_boxplots)
-cleaned_continuous
+continuous_data_1Hz
 ```
 
 ### 4.3 Physiological Signal Feature Extraction
 
 ```{r feature_extraction}
 # Calculate more advanced physiological features
-physio_features <- cleaned_continuous %>%
+
+physio_features <- continuous_data_1Hz %>%
   # Group by each stimulus presentation
   group_by(Participant, Session, StimOrder, StimID) %>%
   summarize(
